--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
         <header>
             <nav id="navbar">
                 <h1 class="title">Kullnrs' Pc's</h1>
-                <ul>
+                <ul class="links">
                     <li><a>Builds</a></li>
+                    <li><a>Customize</a></li>
+                    <li><a>About Us</a></li>
+                    <li><a>Contact Us</a></li>
                 </ul>
             </nav>
         </header>
