--- a/index.html
+++ b/index.html
@@ -19,7 +19,18 @@
             </nav>
         </header>
         <main>
-
+            <section class="card">
+                <h1>Pre-Builts</h1>
+                <h3>Low end</h3>
+                <h3>Mid range</h3>
+                <h3>High end</h3>
+            </section>
+            <section class="card">
+                <h1>Customize your build</h1>
+                <h3>Low end</h3>
+                <h3>Mid range</h3>
+                <h3>High end</h3>
+            </section>
         </main>
         <footer>
             
