--- a/index.html
+++ b/index.html
@@ -19,16 +19,24 @@
             </nav>
         </header>
         <main>
+            <h1>Pre-Builts</h1>
             <section class="card">
-                <h1>Pre-Builts</h1>
                 <h3>Low end</h3>
-                <h3>Mid range</h3>
-                <h3>High end</h3>
             </section>
             <section class="card">
-                <h1>Customize your build</h1>
-                <h3>Low end</h3>
                 <h3>Mid range</h3>
+            </section>
+            <section class="card">
+                <h3>High end</h3>
+            </section>    
+            <h1>Customize your build</h1>
+            <section class="card">
+                <h3>Low end</h3>
+            </section>
+            <section class="card">
+                <h3>Mid range</h3>
+            </section>
+            <section class="card"></section>
                 <h3>High end</h3>
             </section>
         </main>
