--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </nav>
         </header>
         <main>
-            <h1>Pre-Builts</h1>
+            <h1 id="pre">Pre-Builts</h1>
             <section class="card">
                 <h3>Low end</h3>
             </section>
@@ -29,14 +29,14 @@
             <section class="card">
                 <h3>High end</h3>
             </section>    
-            <h1>Customize your build</h1>
+            <h1 id="custom">Customize your build</h1>
             <section class="card">
                 <h3>Low end</h3>
             </section>
             <section class="card">
                 <h3>Mid range</h3>
             </section>
-            <section class="card"></section>
+            <section class="card">
                 <h3>High end</h3>
             </section>
         </main>
