--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
         <main>
             <h1 id="pre">Pre-Builts</h1>
             <section class="card">
-                <h3>Low end</h3>
+                <h3 class="build">Low end</h3>
             </section>
             <section class="card">
-                <h3>Mid range</h3>
+                <h3 class="build">Mid range</h3>
             </section>
             <section class="card">
-                <h3>High end</h3>
+                <h3 class="build">High end</h3>
             </section>    
             <h1 id="custom">Customize your build</h1>
             <section class="card">
-                <h3>Low end</h3>
+                <h3 class="build">Low end</h3>
             </section>
             <section class="card">
-                <h3>Mid range</h3>
+                <h3 class="build">Mid range</h3>
             </section>
             <section class="card">
-                <h3>High end</h3>
+                <h3 class="build">High end</h3>
             </section>
         </main>
         <footer>
